src/test/deca/context/invalid/personalTests/double-decla.deca
// Double declaration of the variable x

{
   int x;
   int x; // Erreur : La variable x est déjà déclarée.
}
